--- a/src/html/_path.html
+++ b/src/html/_path.html
@@ -1,8 +1,8 @@
 <section class="path">
       <h2 class="path__title">
         <span class="path__title--blue">_</span>Выбирайте проверенный путь к вашей перспективной работе</h2>
-    <img class="path__img" srcset="img/image_perspective_job.jpg 360w, img/image_perspective_job@2x.jpg 720w"
-      src="img/image_perspective_job.jpg" alt="Perspective job" width="359" height="453">
+    <img class="path__img" srcset="img/path/image_perspective_job.jpg 360w, img/path/image_perspective_job@2x.jpg 720w"
+      src="img/path/image_perspective_job.jpg" alt="Perspective job" width="359" height="453">
   <ul class="path__list">
     <li class="path__item path__item--01" data-title="01">
       <p class="path__text">
@@ -31,7 +31,7 @@
     </li>
     <li class="path__item path__item--06" data-title="06">
       <p class="path__text">
-        Гарантированно <span class="path__text--bg-blue">получаете предложения</span> от IT-компаний с зарплатой от 700$
+        <span class="path__text--768-blue">Гарантированно <span class="path__text--bg-blue">получаете предложения</span></span> от IT-компаний с зарплатой от 700$
       </p>
     </li>
   </ul>
