--- a/src/html/_employment.html
+++ b/src/html/_employment.html
@@ -49,7 +49,7 @@
       </li>
       <li class="employment__guarantee-item">
         <h4 class="employment__guarantee-title">Получаете вакансии на почту</h4>
-        <p class="employment__guarantee-about" data-title=".5"></p>помогаем составить выгодное резюме.</p>
+        <p class="employment__guarantee-about" data-title=".5"></p>присылаем вам подходящие в рассылке.</p>
       </li>
     </ul>
   </div>
