--- a/src/html/_employment.html
+++ b/src/html/_employment.html
@@ -1,4 +1,5 @@
 <section class="employment">
+  <div class="employment__wrapper">
   <div class="employment__box-info">
     <div class="employment__underline">
       <h2 class="employment__title">
@@ -32,25 +33,26 @@
     </p>
     <ul class="employment__guarantee-list">
       <li class="employment__guarantee-item">
-        <h4 class="employment__guarantee-title">Вас заметят работодатели -</h4>
-        <p class="employment__guarantee-about" data-title=".1"></p>помогаем составить выгодное резюме.</p>
+        <h4 class="employment__guarantee-title" data-title=".1">Вас заметят работодатели -</h4>
+        <p class="employment__guarantee-about"></p>помогаем составить выгодное резюме.</p>
       </li>
       <li class="employment__guarantee-item">
-        <h4 class="employment__guarantee-title">Компании находят вас сами -</h4>
-        <p class="employment__guarantee-about" data-title=".2"></p>даем советы по оформлению страницы в Linkedin.</p>
+        <h4 class="employment__guarantee-title" data-title=".2">Компании находят вас сами -</h4>
+        <p class="employment__guarantee-about"></p>даем советы по оформлению страницы в Linkedin.</p>
       </li>
       <li class="employment__guarantee-item">
-        <h4 class="employment__guarantee-title">Ваше резюме видят IT-компании -</h4>
-        <p class="employment__guarantee-about" data-title=".3"></p>вы в базе выпускников GoIT, даем доступ работодателям.</p>
+        <h4 class="employment__guarantee-title" data-title=".3">Ваше резюме видят IT-компании -</h4>
+        <p class="employment__guarantee-about"></p>вы в базе выпускников GoIT, даем доступ работодателям.</p>
       </li>
       <li class="employment__guarantee-item">
-        <h4 class="employment__guarantee-title">Получаете вакансии на почту</h4>
-        <p class="employment__guarantee-about" data-title=".4"></p>присылаем вам подходящие в рассылке.</p>
+        <h4 class="employment__guarantee-title" data-title=".4">Получаете вакансии на почту</h4>
+        <p class="employment__guarantee-about"></p>присылаем вам подходящие в рассылке.</p>
       </li>
       <li class="employment__guarantee-item">
-        <h4 class="employment__guarantee-title">Получаете вакансии на почту</h4>
-        <p class="employment__guarantee-about" data-title=".5"></p>присылаем вам подходящие в рассылке.</p>
+        <h4 class="employment__guarantee-title" data-title=".5">Получаете вакансии на почту</h4>
+        <p class="employment__guarantee-about"></p>присылаем вам подходящие в рассылке.</p>
       </li>
     </ul>
   </div>
+</div>
 </section>
