--- a/src/html/_path.html
+++ b/src/html/_path.html
@@ -1,7 +1,8 @@
 <section class="path">
-  <h2 class="path__title">
-    <span class="path__title--blue">_</span>Выбирайте проверенный путь к вашей перспективной работе</h2>
   <div class="path__wrapper">
+  <h2 class="path__title">
+      <span class="path__title--blue">_</span>Выбирайте проверенный путь к вашей перспективной работе</h2>
+  <div class="path__box-info">
     <img class="path__img" srcset="img/path/image_perspective_job.jpg 360w, img/path/image_perspective_job@2x.jpg 720w"
       src="img/path/image_perspective_job.jpg" alt="Perspective job" width="359" height="453">
     <ul class="path__list">
@@ -39,5 +40,5 @@
       </li>
     </ul>
   </div>
-
+  </div>
 </section>
