--- a/src/html/_vacancies.html
+++ b/src/html/_vacancies.html
@@ -1,4 +1,5 @@
 <section class="vacancies">
+  <!-- <div class="vacancies__background"></div> -->
   <div class="vacancies__wrapper">
     <div class="vacancies__box-info">
       <div class="vacancies__underline">
