--- a/src/html/_employment.html
+++ b/src/html/_employment.html
@@ -1,58 +1,61 @@
 <section class="employment">
   <div class="employment__wrapper">
-  <div class="employment__box-info">
-    <div class="employment__underline">
-      <h2 class="employment__title">
-        <span class="employment__title--blue">_</span>Даем гарантию и помогаем выпускникам найти работу</h2>
+    <div class="employment__box">
+      <div class="employment__box-info">
+        <div class="employment__underline">
+          <h2 class="employment__title">
+            <span class="employment__title--blue">_</span>Даем гарантию и помогаем выпускникам найти работу</h2>
+        </div>
+        <p class="employment__subtitle">
+          <span class="employment__subtitle--blue">85%</span> наших выпускников знают, что на Украине работа в IT-компании
+          –
+          <span class="employment__subtitle--blue">осуществимая мечта!</span>
+        </p>
+      </div>
+      <p class="employment__perspective">Интересные карьерные перспективы от GoIT:</p>
+      <ul class="employment__perspective-list">
+        <li class="employment__perspective-item">
+          <p class="employment__perspective-text">Вы можете
+            <span class="employment__perspective-text--bold">работать</span> в наших проектах после курса обучения;</p>
+        </li>
+        <li class="employment__perspective-item">
+          <p class="employment__perspective-text">Вы можете
+            <span class="employment__perspective-text--bold">стать</span> нашим преподавателем или ментором после получения практического
+            опыта и передавать знания новичкам.</p>
+        </li>
+      </ul>
     </div>
-    <p class="employment__subtitle">
-      <span class="employment__subtitle--blue">85%</span> наших выпускников знают, что на Украине работа в IT-компании –
-      <span class="employment__subtitle--blue">осуществимая мечта!</span>
-    </p>
+    <div class="employment__guarantee">
+      <p class="employment__guarantee-text">GOIT</p>
+      <p class="employment__guarantee-about">
+        Компании
+        <span class="employment__guarantee-about--bold">больше ценят реальные навыки</span> начинающего специалиста, а не дипломы
+        и государственное образование. Важнее, что человек умеет делать, как он общается
+        с другими людьми, и готов обучаться в процессе работы. Всему этому учим вас
+        на курсе.
+      </p>
+      <ul class="employment__guarantee-list">
+        <li class="employment__guarantee-item">
+          <h4 class="employment__guarantee-title" data-title=".1">Вас заметят работодатели -</h4>
+          <p class="employment__guarantee-help">помогаем составить выгодное резюме.</p>
+        </li>
+        <li class="employment__guarantee-item">
+          <h4 class="employment__guarantee-title" data-title=".2">Компании находят вас сами -</h4>
+          <p class="employment__guarantee-help">даем советы по оформлению страницы в Linkedin.</p>
+        </li>
+        <li class="employment__guarantee-item">
+          <h4 class="employment__guarantee-title" data-title=".3">Ваше резюме видят IT-компании -</h4>
+          <p class="employment__guarantee-help">вы в базе выпускников GoIT, даем доступ работодателям.</p>
+        </li>
+        <li class="employment__guarantee-item">
+          <h4 class="employment__guarantee-title" data-title=".4">Получаете вакансии на почту</h4>
+          <p class="employment__guarantee-help">присылаем вам подходящие в рассылке.</p>
+        </li>
+        <li class="employment__guarantee-item">
+          <h4 class="employment__guarantee-title" data-title=".5">Получаете вакансии на почту</h4>
+          <p class="employment__guarantee-help">присылаем вам подходящие в рассылке.</p>
+        </li>
+      </ul>
+    </div>
   </div>
-  <p class="employment__perspective">Интересные карьерные перспективы от GoIT:</p>
-  <ul class="employment__perspective-list">
-    <li class="employment__perspective-item">
-      <p class="employment__perspective-text">Вы можете
-        <span class="employment__perspective-text--bold">работать</span> в наших проектах после курса обучения;</p>
-    </li>
-    <li class="employment__perspective-item">
-      <p class="employment__perspective-text">Вы можете
-        <span class="employment__perspective-text--bold">стать</span> нашим преподавателем или ментором после получения практического
-        опыта и передавать знания новичкам.</p>
-    </li>
-  </ul>
-  <div class="guarantee">
-    <p class="guarantee__text">GOIT</p>
-    <p class="guarantee__about">
-      Компании
-      <span class="guarantee__about--bold">больше ценят реальные навыки</span> начинающего специалиста, а не дипломы и
-      государственное образование. Важнее, что человек умеет делать, как он общается
-      с другими людьми, и готов обучаться в процессе работы. Всему этому учим вас
-      на курсе.
-    </p>
-    <ul class="employment__guarantee-list">
-      <li class="employment__guarantee-item">
-        <h4 class="employment__guarantee-title" data-title=".1">Вас заметят работодатели -</h4>
-        <p class="employment__guarantee-about"></p>помогаем составить выгодное резюме.</p>
-      </li>
-      <li class="employment__guarantee-item">
-        <h4 class="employment__guarantee-title" data-title=".2">Компании находят вас сами -</h4>
-        <p class="employment__guarantee-about"></p>даем советы по оформлению страницы в Linkedin.</p>
-      </li>
-      <li class="employment__guarantee-item">
-        <h4 class="employment__guarantee-title" data-title=".3">Ваше резюме видят IT-компании -</h4>
-        <p class="employment__guarantee-about"></p>вы в базе выпускников GoIT, даем доступ работодателям.</p>
-      </li>
-      <li class="employment__guarantee-item">
-        <h4 class="employment__guarantee-title" data-title=".4">Получаете вакансии на почту</h4>
-        <p class="employment__guarantee-about"></p>присылаем вам подходящие в рассылке.</p>
-      </li>
-      <li class="employment__guarantee-item">
-        <h4 class="employment__guarantee-title" data-title=".5">Получаете вакансии на почту</h4>
-        <p class="employment__guarantee-about"></p>присылаем вам подходящие в рассылке.</p>
-      </li>
-    </ul>
-  </div>
-</div>
 </section>
