--- a/src/html/_vacancies.html
+++ b/src/html/_vacancies.html
@@ -1,17 +1,20 @@
 <section class="vacancies">
   <!-- <div class="vacancies__background"></div> -->
   <div class="vacancies__wrapper">
-    <div class="vacancies__box-info">
-      <div class="vacancies__underline">
-        <h2 class="vacancies__title">
-          <span class="vacancies__title--blue">_</span>Кем вы можете работать после обучения</h2>
-      </div>
-      <p class="vacancies__subtitle">Средняя зарплата
-        <br>IT-специалиста
-        <span class="vacancies__subtitle--black">&nbsp 2 000 USD &nbsp</span>
-      </p>
-    </div>
     <ul class="vacancies__list">
+      <li class="vacancies__box-info">
+        <!-- <li class="vacancies__item"> -->
+        <!-- <div class="vacancies__box-info"> -->
+        <div class="vacancies__underline">
+          <h2 class="vacancies__title">
+            <span class="vacancies__title--blue">_</span>Кем вы можете работать после обучения</h2>
+        </div>
+        <p class="vacancies__subtitle">Средняя зарплата
+          <br>IT-специалиста
+          <span class="vacancies__subtitle--black">&nbsp 2 000 USD &nbsp</span>
+        </p>
+        <!-- </div> -->
+      </li>
       <li class="vacancies__item">
         <h4 class="vacancies__item-caption vacancies__item-caption--fullstack">Full stack
           <br>разработчик</h4>
@@ -70,8 +73,10 @@
         </p>
       </li>
       <li class="vacancies__item">
-        <h4 class="vacancies__item-caption vacancies__item-caption--before">Вы можете занять любую из этих должностей после обучения в GoIT</h4>
-        <button class="vacancies__item-button" type="submit">Начать обучение на курсе</button>
+        <div class="vacancies__item-wrapper">
+          <h4 class="vacancies__item-caption vacancies__item-caption--before">Вы можете занять любую из этих должностей после обучения в GoIT</h4>
+          <button class="vacancies__item-button" type="submit">Начать обучение на курсе</button>
+        </div>
         <p class="vacancies__item-data">
           <span class="vacancies__item-data--red">*</span>по данным
           <span class="vacancies__item-data--bold">26/03/2018</span> по Украине</p>
