--- a/src/html/_vacancies.html
+++ b/src/html/_vacancies.html
@@ -1,86 +1,86 @@
 <section class="vacancies">
-  <!-- <div class="vacancies__background"></div> -->
-  <div class="vacancies__wrapper">
-    <ul class="vacancies__list">
-      <li class="vacancies__box-info">
-        <!-- <li class="vacancies__item"> -->
-        <!-- <div class="vacancies__box-info"> -->
-        <div class="vacancies__underline">
-          <h2 class="vacancies__title">
-            <span class="vacancies__title--blue">_</span>Кем вы можете работать после обучения</h2>
-        </div>
-        <p class="vacancies__subtitle">Средняя зарплата
-          <br>IT-специалиста
-          <span class="vacancies__subtitle--black">&nbsp 2 000 USD &nbsp</span>
-        </p>
-        <!-- </div> -->
-      </li>
-      <li class="vacancies__item">
-        <h4 class="vacancies__item-caption vacancies__item-caption--fullstack">Full stack
-          <br>разработчик</h4>
-        <p class="vacancies__item-text">(выполняет задачи Front-end и Back-end, создает веб-приложения, сайты, инструменты)</p>
-        <p class="vacancies__item-salary">*Стартовая зарплата
-          <span class="vacancies__item-salary--number">700 USD</span>
-        </p>
-        <p class="vacancies__item-amt">Количество вакансий &#8195;
-          <span class="vacancies__item-amt--number">2</span>
-        </p>
-      </li>
-      <li class="vacancies__item">
-        <h4 class="vacancies__item-caption vacancies__item-caption--front-end">Front-end
-          <br>разработчик</h4>
-        <p class="vacancies__item-text">(создает клиентскую часть веб-сайта или веб-приложения – интерфейс)</p>
-        <p class="vacancies__item-salary">*Стартовая зарплата
-          <span class="vacancies__item-salary--number">400 USD</span>
-        </p>
-        <p class="vacancies__item-amt">Количество вакансий &#8195;
-          <span class="vacancies__item-amt--number"> 2</span>
-        </p>
-      </li>
-      <li class="vacancies__item">
-        <h4 class="vacancies__item-caption vacancies__item-caption--back-end">Back-end
-          <br>разработчик</h4>
-        <p class="vacancies__item-text">(создает серверную логику и базы данных, контролирует их взаимодействие с
-          клиентской частью)
-        </p>
-        <p class="vacancies__item-salary">*Стартовая зарплата
-          <span class="vacancies__item-salary--number">600 USD</span>
-        </p>
-        <p class="vacancies__item-amt">Количество вакансий &#8195;
-          <span class="vacancies__item-amt--number">2</span>
-        </p>
-      </li>
-      <li class="vacancies__item">
-        <h4 class="vacancies__item-caption vacancies__item-caption--web-developer">Web-
-          <br>developer</h4>
-        <p class="vacancies__item-text">(создает сайты для малого бизнеса на движках по шаблону, например, WordPress)</p>
-        <p class="vacancies__item-salary">*Стартовая зарплата
-          <span class="vacancies__item-salary--number">400 USD</span>
-        </p>
-        <p class="vacancies__item-amt">Количество вакансий &#8195;
-          <span class="vacancies__item-amt--number">2</span>
-        </p>
-      </li>
-      <li class="vacancies__item">
-        <h4 class="vacancies__item-caption vacancies__item-caption--html-coder">Html-
-          <br>верстальщик</h4>
-        <p class="vacancies__item-text">(выполняет верстку сайтов по макету, перенос psd-макета в html/css)</p>
-        <p class="vacancies__item-salary">*Стартовая зарплата
-          <span class="vacancies__item-salary--number">300 USD</span>
-        </p>
-        <p class="vacancies__item-amt">Количество вакансий &#8195;
-          <span class="vacancies__item-amt--number">2</span>
-        </p>
-      </li>
-      <li class="vacancies__item">
-        <div class="vacancies__item-wrapper">
-          <h4 class="vacancies__item-caption vacancies__item-caption--before">Вы можете занять любую из этих должностей после обучения в GoIT</h4>
-          <button class="vacancies__item-button" type="submit">Начать обучение на курсе</button>
-        </div>
-        <p class="vacancies__item-data">
-          <span class="vacancies__item-data--red">*</span>по данным
-          <span class="vacancies__item-data--bold">26/03/2018</span> по Украине</p>
-      </li>
-    </ul>
+  <div class="vacancies__background">
+    <div class="vacancies__wrapper">
+      <ul class="vacancies__list">
+        <li class="vacancies__box-info">
+          <div class="vacancies__underline">
+            <h2 class="vacancies__title">
+              <span class="vacancies__title--blue">_</span>Кем вы можете работать после обучения</h2>
+          </div>
+          <p class="vacancies__subtitle">Средняя зарплата
+            <br>IT-специалиста
+            <span class="vacancies__subtitle--black">&nbsp 2 000 USD &nbsp</span>
+          </p>
+        </li>
+        <li class="vacancies__item">
+          <h4 class="vacancies__item-caption vacancies__item-caption--fullstack">Full stack
+            <br>разработчик</h4>
+          <p class="vacancies__item-text">(выполняет задачи Front-end и Back-end, создает веб-приложения, сайты,
+            инструменты)
+          </p>
+          <p class="vacancies__item-salary">*Стартовая зарплата
+            <span class="vacancies__item-salary--number">700 USD</span>
+          </p>
+          <p class="vacancies__item-amt">Количество вакансий &#8195;
+            <span class="vacancies__item-amt--number">2</span>
+          </p>
+        </li>
+        <li class="vacancies__item">
+          <h4 class="vacancies__item-caption vacancies__item-caption--front-end">Front-end
+            <br>разработчик</h4>
+          <p class="vacancies__item-text">(создает клиентскую часть веб-сайта или веб-приложения – интерфейс)</p>
+          <p class="vacancies__item-salary">*Стартовая зарплата
+            <span class="vacancies__item-salary--number">400 USD</span>
+          </p>
+          <p class="vacancies__item-amt">Количество вакансий &#8195;
+            <span class="vacancies__item-amt--number"> 2</span>
+          </p>
+        </li>
+        <li class="vacancies__item">
+          <h4 class="vacancies__item-caption vacancies__item-caption--back-end">Back-end
+            <br>разработчик</h4>
+          <p class="vacancies__item-text">(создает серверную логику и базы данных, контролирует их взаимодействие
+            с клиентской частью)
+          </p>
+          <p class="vacancies__item-salary">*Стартовая зарплата
+            <span class="vacancies__item-salary--number">600 USD</span>
+          </p>
+          <p class="vacancies__item-amt">Количество вакансий &#8195;
+            <span class="vacancies__item-amt--number">2</span>
+          </p>
+        </li>
+        <li class="vacancies__item">
+          <h4 class="vacancies__item-caption vacancies__item-caption--web-developer">Web-
+            <br>developer</h4>
+          <p class="vacancies__item-text">(создает сайты для малого бизнеса на движках по шаблону, например, WordPress)</p>
+          <p class="vacancies__item-salary">*Стартовая зарплата
+            <span class="vacancies__item-salary--number">400 USD</span>
+          </p>
+          <p class="vacancies__item-amt">Количество вакансий &#8195;
+            <span class="vacancies__item-amt--number">2</span>
+          </p>
+        </li>
+        <li class="vacancies__item">
+          <h4 class="vacancies__item-caption vacancies__item-caption--html-coder">Html-
+            <br>верстальщик</h4>
+          <p class="vacancies__item-text">(выполняет верстку сайтов по макету, перенос psd-макета в html/css)</p>
+          <p class="vacancies__item-salary">*Стартовая зарплата
+            <span class="vacancies__item-salary--number">300 USD</span>
+          </p>
+          <p class="vacancies__item-amt">Количество вакансий &#8195;
+            <span class="vacancies__item-amt--number">2</span>
+          </p>
+        </li>
+        <li class="vacancies__item">
+          <div class="vacancies__item-wrapper">
+            <h4 class="vacancies__item-caption vacancies__item-caption--before">Вы можете занять любую из этих должностей после обучения в GoIT</h4>
+            <button class="vacancies__item-button" type="submit">Начать обучение на курсе</button>
+          </div>
+          <p class="vacancies__item-data">
+            <span class="vacancies__item-data--red">*</span>по данным
+            <span class="vacancies__item-data--bold">26/03/2018</span> по Украине</p>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
