fixed sec path img

--- a/src/html/_path.html
+++ b/src/html/_path.html
@@ -4,12 +4,11 @@
       <span class="path__title--blue">_</span>Выбирайте проверенный путь к вашей перспективной работе</h2>
     <div class="path__box-info">
       <picture class="path__img">
-        <source media="(min-width: 768px)" srcset="img/path/image_perspective_job.jpg, img/path/image_perspective_job@2x.jpg 2x">
+        <!-- <source media="(min-width: 768px and max-width: 1919.98px)" srcset="img/path/image_perspective_job.jpg, img/path/image_perspective_job@2x.jpg 2x"> -->
         <source media="(min-width: 1920px)" srcset="img/path/image_perspective_job_1920.jpg, img/path/image_perspective_job_1920@2x.jpg 2x">
 
         <img  srcset="img/path/image_perspective_job.jpg 360w, img/path/image_perspective_job@2x.jpg 720w"
-          src="img/path/image_perspective_job.jpg" alt="Perspective job" width="359"
-          height="453">
+          src="img/path/image_perspective_job.jpg" alt="Perspective job">
       </picture>
 
       <ul class="path__list">
