--- a/src/html/_path.html
+++ b/src/html/_path.html
@@ -1,48 +1,50 @@
 <section class="path">
-  <div class="path__wrapper">
-    <h2 class="path__title">
-      <span class="path__title--blue">_</span>Выбирайте проверенный путь к вашей перспективной работе</h2>
-    <div class="path__box-info">
-      <picture class="path__img">
-        <source media="(min-width: 1920px)" srcset="img/path/image_perspective_job_1920.jpg, img/path/image_perspective_job_1920@2x.jpg 2x">
-        <img  srcset="img/path/image_perspective_job.jpg 360w, img/path/image_perspective_job@2x.jpg 720w"
-          src="img/path/image_perspective_job.jpg" alt="Perspective job">
-      </picture>
+  <div class="path--background">
+    <div class="path__wrapper">
+      <h2 class="path__title">
+        <span class="path__title--blue">_</span>Выбирайте проверенный путь к вашей перспективной работе</h2>
+      <div class="path__box-info">
+        <picture class="path__img">
+          <source media="(min-width: 1920px)" srcset="img/path/image_perspective_job_1920.jpg, img/path/image_perspective_job_1920@2x.jpg 2x">
+          <img srcset="img/path/image_perspective_job.jpg 360w, img/path/image_perspective_job@2x.jpg 720w"
+            src="img/path/image_perspective_job.jpg" alt="Perspective job">
+        </picture>
 
-      <ul class="path__list">
-        <li class="path__item path__item--01" data-title="01">
-          <p class="path__text">
-            Принимаете решение получить профессию «Web-разработчик»
-          </p>
-        </li>
-        <li class="path__item path__item--02" data-title="02">
-          <p class="path__text">
-            <a href="#" class="path__link">Регистрируетесь на курс</a> «Full Stack-разработчик с нуля» в GoIT
-          </p>
-        </li>
-        <li class="path__item path__item--03" data-title="03">
-          <p class="path__text">
-            Проходите обучение, выполняете все ДЗ, работаете в командах
-          </p>
-        </li>
-        <li class="path__item path__item--04" data-title="04">
-          <p class="path__text">
-            Выполняете 4 реальных проекта за время учебы
-          </p>
-        </li>
-        <li class="path__item path__item--05" data-title="05">
-          <p class="path__text">
-            Сдаете выпускной проект
-          </p>
-        </li>
-        <li class="path__item path__item--06" data-title="06">
-          <p class="path__text">
-            <span class="path__text--768-blue">Гарантированно
-              <span class="path__text--bg-blue">получаете предложения&nbsp</span>
-            </span> от IT-компаний с зарплатой от 700$
-          </p>
-        </li>
-      </ul>
+        <ul class="path__list">
+          <li class="path__item path__item--01" data-title="01">
+            <p class="path__text">
+              Принимаете решение получить профессию «Web-разработчик»
+            </p>
+          </li>
+          <li class="path__item path__item--02" data-title="02">
+            <p class="path__text">
+              <a href="#" class="path__link">Регистрируетесь на курс</a> «Full Stack-разработчик с нуля» в GoIT
+            </p>
+          </li>
+          <li class="path__item path__item--03" data-title="03">
+            <p class="path__text">
+              Проходите обучение, выполняете все ДЗ, работаете в командах
+            </p>
+          </li>
+          <li class="path__item path__item--04" data-title="04">
+            <p class="path__text">
+              Выполняете 4 реальных проекта за время учебы
+            </p>
+          </li>
+          <li class="path__item path__item--05" data-title="05">
+            <p class="path__text">
+              Сдаете выпускной проект
+            </p>
+          </li>
+          <li class="path__item path__item--06" data-title="06">
+            <p class="path__text">
+              <span class="path__text--768-blue">Гарантированно
+                <span class="path__text--bg-blue">получаете предложения&nbsp</span>
+              </span> от IT-компаний с зарплатой от 700$
+            </p>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
